--- a/DreamTeamTecContactFormMail/appsettings.json
+++ b/DreamTeamTecContactFormMail/appsettings.json
@@ -13,5 +13,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  //"FrontUrl": "http://localhost:4200"
+  "FrontUrl": "https://www.dttec.com.br"
 }
