--- a/DreamTeamTecContactFormMail/appsettings.json
+++ b/DreamTeamTecContactFormMail/appsettings.json
@@ -1,6 +1,7 @@
 {
   "EmailSettings": {
     "Mail": "breno_baroni@hotmail.com",
+    "To": "contato@dttec.com.br",
     "DisplayName": "DreamTeam Tecnologia",
     "Password": "bcgkpfyjxoelbnts",
     "Host": "smtp-mail.outlook.com",
@@ -13,6 +14,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "WebApiDatabase": "server=sql726.main-hosting.eu;port=3306;database=u177049950_dtMaster;uid=u177049950_dtMaster;password=Ph9784lhama@."
+  },
+  "XApiKey": "0cb9139e-7109-4dc5-a84c-bf294e9be662",
   "AllowedHosts": "*",
   //"FrontUrl": "http://localhost:4200"
   "FrontUrl": "https://www.dttec.com.br"
