--- a/DreamTeamTecContactFormMail/appsettings.json
+++ b/DreamTeamTecContactFormMail/appsettings.json
@@ -1,10 +1,10 @@
 {
   "EmailSettings": {
-    "Mail": "breno_baroni@hotmail.com",
-    "To": "contato@dttec.com.br",
+    "Mail": "",
+    "To": "",
     "DisplayName": "DreamTeam Tecnologia",
-    "Password": "bcgkpfyjxoelbnts",
-    "Host": "smtp-mail.outlook.com",
+    "Password": "",
+    "Host": "smtp-mail.outlook.com", //For Outlook
     "Port": 587
   },
   "Logging": {
@@ -15,10 +15,10 @@
     }
   },
   "ConnectionStrings": {
-    "WebApiDatabase": "server=sql726.main-hosting.eu;port=3306;database=u177049950_dtMaster;uid=u177049950_dtMaster;password=Ph9784lhama@."
+    "WebApiDatabase": ""
   },
-  "XApiKey": "0cb9139e-7109-4dc5-a84c-bf294e9be662",
+  "XApiKey": "",
   "AllowedHosts": "*",
   //"FrontUrl": "http://localhost:4200"
-  "FrontUrl": "https://www.dttec.com.br"
+  "FrontUrl": ""
 }
