--- a/DreamTeamTecContactFormMail/appsettings.json
+++ b/DreamTeamTecContactFormMail/appsettings.json
@@ -4,7 +4,7 @@
     "To": "",
     "DisplayName": "DreamTeam Tecnologia",
     "Password": "",
-    "Host": "smtp-mail.outlook.com", //For Outlook
+    "Host": "smtp-mail.outlook.com",
     "Port": 587
   },
   "Logging": {
@@ -19,6 +19,5 @@
   },
   "XApiKey": "",
   "AllowedHosts": "*",
-  //"FrontUrl": "http://localhost:4200"
   "FrontUrl": ""
 }
